--- a/src/components/index/hello.less
+++ b/src/components/index/hello.less
@@ -1,10 +1,133 @@
 // https://blog.csdn.net/bigname22/article/details/79248190
+div{
+  box-sizing: border-box;
+}
 .contain{
-  .top-banner{
-    width: 100%;
-    height: 350px;
-    background: url(./img/header.jpg) no-repeat center;
-    background-size: 100%;
+  min-width: 1280px;
+  .top-contain{
+    height: 100vh;
+    position: relative;
+    .top-banner{
+      width: 100%;
+      height: 70%;
+      background: url(./img/header.jpg) no-repeat center;
+      background-size: 100%;
+      position: relative;
+      .title{
+        color:#fff;
+        font-size: 30px;
+        position: absolute;
+        bottom:250px;
+        text-align: center;
+        width: 100%;
+      }
+      .module-contain{
+        width:100%;
+        position: absolute;
+        bottom:-60px;
+  
+        .moduler{
+          width: 70%;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          color:#fff;
+          padding:0 10%;
+          margin:0 auto;
+          .module-common{
+            // height: 100px;
+            box-shadow: 2px 2px 4px #ababab;
+            background: #fff;
+            color:#333;
+            font-weight: bold;
+            font-size: 30px;
+            border:2px solid #eee;
+            padding:20px 20px 60px;
+          }
+        }
+      }
+    }
+    .welcome{
+      width:1280px;
+      position: absolute;
+      bottom:50px;
+      text-align: left;
+      left:50%;
+      margin-left:-640px;
+      // padding: 0 15%;
+      font-size: 26px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .span-title{
+        width: 32%;
+        text-align: center;
+        display: block;
+      }
+      .border-before{
+        height: 2px;
+        background: #eee;
+        width: 10%;
+      }
+      .border-after{
+        height: 2px;
+        background: #eee;
+        width: 58%;
+      }
+      // &::before{
+      //   content: '';
+      //   width: 4%;
+      //   background: #eee;
+      //   height: 2px;
+      //   display: block;
+      //   position: absolute;
+      //   top:15px;
+      // }
+      // &::after{
+      //   content: '';
+      //   background: #eee;
+      //   height: 2px;
+      //   display: block;
+      //   position: absolute;
+      //   top:15px;
+      //   width: 46%;
+      //   right: 15%;
+      // }
+
+
+    }
+  }
+  .main-contain{
+    width:1280px;
+    margin:0 auto;
+    display: flex;
+    flex-direction: row;
+    .main-left-contain{
+      width: 250px;
+      border: 2px solid #eee;
+      border-top:none;
+      .introduce{
+        .introduce-title{
+          .in-title{
+            font-size:24px;
+            padding:10px 0;
+            margin: 0 10px;
+            margin-top: -1px;
+            border-bottom:2px solid #eee;
+            border-top:2px solid #eee;
+          }
+          .header-img{
+            margin:20px 0;
+          }
+          .introduce-name{
+            font-size: 20px;
+          }
+          .say{
+            color:#999;
+          }
+        }
+      }
+    }
   }
 }
 
