--- a/src/components/index/hello.less
+++ b/src/components/index/hello.less
@@ -99,10 +99,11 @@ div{
   }
   .main-contain{
     width:1280px;
-    margin:0 auto;
+    margin:0 auto 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
     .main-left-contain{
       width: 250px;
       border: 2px solid #c2bfa0;
@@ -246,6 +247,7 @@ div{
                 opacity: 0.7;
                 padding:0 5px;
                 border-radius: 2px;
+                border:1px solid #b1ae8e;
               }
             }
           }
